--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p><img src="../images/alice.jpeg"></p>
+<p><img src="images/alice.jpeg"></p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
